fix bg color for guide on mobile

--- a/fragments/mobile/template/public/mobile.css
+++ b/fragments/mobile/template/public/mobile.css
@@ -10,7 +10,7 @@ main {
 .node_posts__layout {
   background: #0bf5cc;
 }
-.node_contact__layout {
+.node_guide__layout {
   background: #a1fac3;
 }
 .node_home__layout {
